ctx-demo/10-grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: app
          image: grafana/grafana:8.2.5
          ports:
            - name: http
              containerPort: 3000
