ctx-demo/10-grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: grafana-svc
spec:
  selector:
    app: grafana
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
