ctx-demo/10-grafana/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ir
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.demo-apps.de`)
    kind: Rule
    services:
    - name: grafana-svc
      port: 3000
